# metoptlab4

./: pyproject.toml
src/: config.py  main.py  utils.py
src/solvers/: coordinate_descent.py  fastest_descent.py  gradient_descent.py
